# aaq-sync

./: .dockerignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: build.yaml  test.yaml
src/aaq_sync/: cli.py  data_export_client.py  data_models.py  itertools.py  sync.py
tests/: conftest.py  fake_data_export.py  helpers.py  test_cli.py  test_data_models.py  test_export_client.py  test_itertools.py  test_sync.py
tests/test_data/: two_faqs.json
