[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "aaq-sync"
version = "0.0.1.dev0"
description = "A tool to sync FAQs and maybe other stuff between AAQ instances"
authors = ["Praekelt.org <dev@praekelt.org>"]
license = "BSD 3-Clause"
readme = "README.md"
repository = "https://github.com/praekeltfoundation/aaq-sync"
packages = [
    { include = "aaq_sync", from = "src" }
]
include = [
    { path = "tests", format = "sdist" }
]

[tool.poetry.dependencies]
python = "^3.11"
attrs = "^23.1.0"
click = "^8.1.4"
httpx = "^0.24.1"
sqlalchemy = "^2.0.16"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
mypy = "^1.2.0"
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
pytest-httpx = "^0.22.0"
pytest-postgresql = "^5.0.0"
ruff = "^0.0.261"
types-click = "^7.1.8"

[tool.poetry.group.lsp]
optional = true

[tool.poetry.group.lsp.dependencies]
pylsp-mypy = "^0.6.6"
python-lsp-black = "^1.2.1"
python-lsp-ruff = "^1.4.0"
python-lsp-server = "^1.7.2"

[tool.black]
preview = true

[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = false

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term-missing"

[tool.coverage.report]
exclude_also = ["@overload"]

[tool.ruff]
select = [
    "E", "F", "W", # pycodestyle + pyflakes == flake8 - mccabe
    "I",           # isort
    "UP",          # pyupgrade
    "S",           # flake8-bandit
    "B",           # flake8-bugbear
    "C4",          # flake8-comprehensions
    "PIE",         # flake8-pie
    "PT",          # flake8-pytest-style
    "SIM",         # flake8-simplify
    "PTH",         # flake8-use-pathlib
]
target-version = "py311"

[tool.ruff.isort]
known-first-party = ["aaq_sync"]

[tool.ruff.per-file-ignores]
"tests/**" = [
    "S101",  # It's okay to use `assert` in tests.
]
